# lmclus

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
R/: lmclus.R
cmake_modules/: FindMKL.cmake
contrib/: r-pack-win-build.bat  wincompile.bat
contrib/libs/: README
data/: lmclus.ini
include/: Kittler.h  Kittler.hpp  lmclus.hpp
include/armadillo/armadillo_bits/: arma_version.hpp  config.hpp
include/cpplog/: cpplog.hpp
inst/include/: Kittler.h  histogram.h  lmclus.hpp  separation.hpp
inst/include/armadillo/armadillo_bits/: config.hpp  config.hpp~
man/: lmclus-package.Rd  lmclus.Rd  lmclus.distToManifold.Rd  lmclus.get_cluster.Rd  lmclus.kittler.Rd  lmclus.params.Rd
sample/: lmclus.ini
src/: CMakeLists.txt  Kittler.cpp  Makevars  histogram.cpp  lmclus.cpp  lmclusr.cpp
tests/: CMakeLists.txt  lmclus.ini  lmclus_la_test.cpp  lmclus_test.cpp  testData
